// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message should render alert correct 1`] = `
"<ShineoutMessage onDestory={[Function: onDestory]}>
  <div className=\\"so-message-item undefined\\">
    <ShineoutAlert className=\\"so-message-msg\\" dismiss={[undefined]} onClose={[Function: bound removeMessage]} icon={true} iconSize={14} style={{...}} type=\\"info\\" size=\\"default\\" duration={216}>
      <div className=\\"so-alert so-alert-info so-alert-with-close so-alert-with-icon so-message-msg\\" style={{...}}>
        <a className=\\"so-alert-close\\" onClick={[Function: bound handleClose]}>
          <svg viewBox=\\"0 0 1024 1024\\">
            <path d=\\"M602.512147 511.99738l402.747939-402.747939a63.999673 63.999673 0 0 0-90.509537-90.509537L512.00261 421.487843 109.254671 18.749904a63.999673 63.999673 0 0 0-90.509537 90.509537L421.493073 511.99738 18.755134 914.745319a63.999673 63.999673 0 0 0 90.509537 90.509537L512.00261 602.506917l402.747939 402.747939a63.999673 63.999673 0 0 0 90.509537-90.509537z\\" />
          </svg>
        </a>
        <div className=\\"so-alert-icon\\" style={{...}}>
          <svg viewBox=\\"0 0 1024 1024\\">
            <path d=\\"M512 1024c282.771 0 512-229.23 512-512s-229.23-512-512-512-512 229.23-512 512 229.23 512 512 512zM432 256c0-44.183 35.817-80 80-80s80 35.817 80 80v31.999c0 44.183-35.817 80-80 80s-80-35.817-80-80v-31.999zM431.999 512c0-44.183 35.817-80 80-80s80 35.817 80 80v256c0 44.183-35.817 80-80 80s-80-35.817-80-80v-256z\\" />
          </svg>
        </div>
        <div className=\\"so-alert-content\\">
          The Alert Message !!!
        </div>
      </div>
    </ShineoutAlert>
  </div>
</ShineoutMessage>"
`;

exports[`Message should render alert correct 2`] = `
"<ShineoutMessage onDestory={[Function: onDestory]}>
  <div className=\\"so-message-item undefined\\">
    <ShineoutAlert className=\\"so-message-msg\\" dismiss={[undefined]} onClose={[Function: bound removeMessage]} icon={true} iconSize={14} style={{...}} type=\\"success\\" size=\\"default\\" duration={216}>
      <div className=\\"so-alert so-alert-success so-alert-with-close so-alert-with-icon so-message-msg\\" style={{...}}>
        <a className=\\"so-alert-close\\" onClick={[Function: bound handleClose]}>
          <svg viewBox=\\"0 0 1024 1024\\">
            <path d=\\"M602.512147 511.99738l402.747939-402.747939a63.999673 63.999673 0 0 0-90.509537-90.509537L512.00261 421.487843 109.254671 18.749904a63.999673 63.999673 0 0 0-90.509537 90.509537L421.493073 511.99738 18.755134 914.745319a63.999673 63.999673 0 0 0 90.509537 90.509537L512.00261 602.506917l402.747939 402.747939a63.999673 63.999673 0 0 0 90.509537-90.509537z\\" />
          </svg>
        </a>
        <div className=\\"so-alert-icon\\" style={{...}}>
          <svg viewBox=\\"0 0 1024 1024\\">
            <path d=\\"M874 150C674.09-50 349.91-50 150 150s-200 524.09 0 724 524.09 200 724 0 200-524.09 0-724zM760.57 440.57l-256 256a80 80 0 0 1-113.14 0l-128-128a80 80 0 0 1 113.14-113.14L448 526.86l199.43-199.43a80 80 0 0 1 113.14 113.14z\\" />
          </svg>
        </div>
        <div className=\\"so-alert-content\\">
          The Alert Message !!!
        </div>
      </div>
    </ShineoutAlert>
  </div>
</ShineoutMessage>"
`;

exports[`Message should render alert correct 3`] = `
"<ShineoutMessage onDestory={[Function: onDestory]}>
  <div className=\\"so-message-item undefined\\">
    <ShineoutAlert className=\\"so-message-msg\\" dismiss={[undefined]} onClose={[Function: bound removeMessage]} icon={true} iconSize={14} style={{...}} type=\\"warn\\" size=\\"default\\" duration={216}>
      <div className=\\"so-alert so-alert-warn so-alert-with-close so-message-msg\\" style={{...}}>
        <a className=\\"so-alert-close\\" onClick={[Function: bound handleClose]}>
          <svg viewBox=\\"0 0 1024 1024\\">
            <path d=\\"M602.512147 511.99738l402.747939-402.747939a63.999673 63.999673 0 0 0-90.509537-90.509537L512.00261 421.487843 109.254671 18.749904a63.999673 63.999673 0 0 0-90.509537 90.509537L421.493073 511.99738 18.755134 914.745319a63.999673 63.999673 0 0 0 90.509537 90.509537L512.00261 602.506917l402.747939 402.747939a63.999673 63.999673 0 0 0 90.509537-90.509537z\\" />
          </svg>
        </a>
        <div className=\\"so-alert-content\\">
          The Alert Message !!!
        </div>
      </div>
    </ShineoutAlert>
  </div>
</ShineoutMessage>"
`;

exports[`Message should render alert correct 4`] = `
"<ShineoutMessage onDestory={[Function: onDestory]}>
  <div className=\\"so-message-item undefined\\">
    <ShineoutAlert className=\\"so-message-msg\\" dismiss={[undefined]} onClose={[Function: bound removeMessage]} icon={true} iconSize={14} style={{...}} type=\\"error\\" size=\\"default\\" duration={216}>
      <div className=\\"so-alert so-alert-error so-alert-with-close so-alert-with-icon so-message-msg\\" style={{...}}>
        <a className=\\"so-alert-close\\" onClick={[Function: bound handleClose]}>
          <svg viewBox=\\"0 0 1024 1024\\">
            <path d=\\"M602.512147 511.99738l402.747939-402.747939a63.999673 63.999673 0 0 0-90.509537-90.509537L512.00261 421.487843 109.254671 18.749904a63.999673 63.999673 0 0 0-90.509537 90.509537L421.493073 511.99738 18.755134 914.745319a63.999673 63.999673 0 0 0 90.509537 90.509537L512.00261 602.506917l402.747939 402.747939a63.999673 63.999673 0 0 0 90.509537-90.509537z\\" />
          </svg>
        </a>
        <div className=\\"so-alert-icon\\" style={{...}}>
          <svg viewBox=\\"0 0 1024 1024\\">
            <path d=\\"M512 0C232 0 5 226.64 4.97250989 506.66666667s226.99620754 507.02749011 507.02749011 507.02749011 507.02749011-226.99620754 507.02749011-507.02749011S792.03128257-0.36082344 512-0.36082344zM701.01984777 685.92623566c-22.86694019 22.84158802-59.9052983 22.84158802-82.74688632 0l-96.51268267-96.51268267-96.51268266 96.51268267c-22.86694019 22.84158802-59.9052983 22.84158802-82.74688632 0-22.84158802-22.86694019-22.84158802-59.9052983 0-82.74688632L439.01339246 506.66666667l-96.53803365-96.51268267c-22.84158802-22.86694019-22.84158802-59.9052983 0-82.74688632 22.86694019-22.84158802 59.9052983-22.84158802 82.74688632 0l96.51268267 96.51268267 96.51268266-96.51268267c22.86694019-22.84158802 59.9052983-22.86694019 82.74688633 0 22.84158802 22.86694019 22.84158802 59.9052983 0 82.74688632L604.48181413 506.66666667l96.53803364 96.51268267C723.86143696 626.04628952 723.88678795 663.08464763 701.01984777 685.92623566z\\" />
          </svg>
        </div>
        <div className=\\"so-alert-content\\">
          The Alert Message !!!
        </div>
      </div>
    </ShineoutAlert>
  </div>
</ShineoutMessage>"
`;
